# hurra-app

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.claude/: settings.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-02-bridge-ux-polish.md  2026-06-09-kmbox-net-endpoint.md
docs/superpowers/specs/: 2026-06-02-bridge-ux-polish-design.md  2026-06-09-kmbox-net-endpoint-design.md
examples/: hello.c
include/: hurra.h  hurra_types.h
src/: TF_Config.h  bridge.c  ferrum_parser.c  ferrum_parser.h  frontend.h  frontend_kmbox.c  frontend_kmbox.h  frontend_vcom.c  frontend_vcom.h  hurra.c  input_core.c  input_core.h  kmbox_codec.c  kmbox_codec.h  kmbox_proto.h  selector.c  selector.h  serial.h  serial_enum.c  serial_enum.h  serial_enum_stub.c  serial_enum_win32.c  serial_unix.c  serial_win32.c  udp_socket.h  udp_socket_unix.c  udp_socket_win32.c  ui_util.h  virtual_port.h  virtual_port_unix.c  virtual_port_win32.c
tests/: ferrum_framing_test.c  input_core_test.c  kmbox_codec_test.c  kmbox_loopback_test.c  serial_enum_test.c  ui_util_test.c
